--- a/2day/osnova.html
+++ b/2day/osnova.html
@@ -1,48 +1,49 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<title>Картинка бегает</title>
+    <head>
+        <title>Картинка двигается</title>
+       <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" type="text/css" href=".\css\style.css">
+ <script src="js\app.js"></script>
 
-	<link href="..\fonts\arsenal-regular.woff2" rel="preload" as="font">
-	<meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href=".\css\style.css">
-</head>
-<body>
-	<br>
-	<hr size="3px" class="line">
-<a href="" class="magic-list__item">
-	<div id="move" class="object van move-left">
-	<div class="magic-list__header"><span class="cifri"><sup>(01) </sup></span>Искусство в деталях</div>
-</div>
-</a>
-<hr>
-<a href="" class="magic-list__item" class="magic-list__header">
-	<div id="move" class="object van move-left">
-	<div  class="magic-list__header"><span class="cifri"><sup>(02) </sup></span>Инновации</div>
-</div>
-</a>
-</div>
-<hr>
-<a href="" class="magic-list__item" class="magic-list__header">
-	<div id="move" class="object van move-left">
-	<div class="magic-list__header"><span class="cifri"><sup>(03) </sup></span>Первые впечатления</div>
-</div>
-</a>
-<hr>
-<a href="" class="magic-list__item" class="magic-list__header">
-	<div id="move" class="object van move-left">
-	<div class="magic-list__header"><span class="cifri"><sup>(04) </sup></span>Погружение в эпоху</div>
-</div>
-</a>
-<hr>
-<a href="" class="magic-list__item" class="magic-list__header">
-	<div id="move" class="object van move-left">
-	<div class="magic-list__header"><span class="cifri"><sup>(04) </sup></span>Образы</div>
-</div>
-</a>
-<script src="..\js\app.js"></script>
+    </head>
+    <body>
+    <div class="magic-list">
+    	<hr size="3" class="line">
+        <a href="#" class="magic-list__item">
+            <div class="magic-list__header">Искусство<br>в деталях</div>
+            <div class="cursor">
+            <div class="cursor__image" style="background-image: url(img/1.jpg)"></div>
+            </div>
+        </a>
+        <hr>
+        <a href="#" class="magic-list__item">
+            <div class="magic-list__header">Инновации</div>
+            <div class="cursor">
+            <div class="cursor__image" style="background-image: url(img/2.jpg)"></div>
+            </div>
+        </a>
+        <hr>
+        <a href="#" class="magic-list__item">
+            <div class="magic-list__header">Первые<br> впечатления</div>
+            <div class="cursor">
+            <div class="cursor__image" style="background-image: url(img/3.jpg)"></div>
+            </div>
+        </a>
+        <hr>
+            <a href="#" class="magic-list__item">
+            <div class="magic-list__header">Погружение<br> в эпоху</div>
+            <div class="cursor">
+            <div class="cursor__image" style="background-image: url(img/4.jpg)"></div>
+            </div>
+        </a>
+        <hr>
+        <a href="#" class="magic-list__item">
+            <div class="magic-list__header">Образы</div>
+            <div class="cursor">
+            <div class="cursor__image" style="background-image: url(img/5.jpg)"></div>
+            </div>
+        </a>
+    </div>
 </body>
 </html>
-
-
